# nslang

./: .gitignore  Makefile  main.ns  nslang  test.py  tst.ns  tstinterp.ns
cppver/: CMakeLists.txt
cppver/.cache/clangd/index/: char_utils.cpp.1B58CC3DF334F003.idx  char_utils.cpp.FAA7F11AA518EB16.idx  char_utils.hpp.BCC9501997EF5FA8.idx  char_utils.hpp.F8C12F62500A3387.idx  codegen.cpp.33C78D5B29271F3B.idx  codegen.hpp.397E43E5509BA01F.idx  constexpr.cpp.42EE44F0D7C782D5.idx  constexpr.cpp.8D7297D3BDCCEBB1.idx  constexpr.hpp.F24AD9B887BDE7A8.idx  context.cpp.1880C508DEAD6EED.idx  context.cpp.5D03FEBAA14764D5.idx  context.hpp.16CAA8ADB5AF367B.idx  context.hpp.18A3D8817F29D3B7.idx  context.hpp.B01258C7E79E7C9E.idx  convert.cpp.8981D35DF66CDFC4.idx  convert.cpp.E2F2008D40393938.idx  convert.hpp.3A2434F3D02F77CA.idx  convert.hpp.E8408BC907C057F6.idx  decl.cpp.09B0444BFF8C135C.idx  decl.cpp.130A0018CCEC2A86.idx  decl.cpp.14FAC525882423D0.idx  decl.cpp.237FA657231068ED.idx  decl.cpp.28AE813DC586B868.idx  decl.cpp.5FFE56F4D3DADA93.idx  decl.hpp.58388DECF81C8167.idx  decl.hpp.B5D21FAB3206B70B.idx  defines.hpp.18575ABD63BBF8A1.idx  defines.hpp.F197A5ECC8782DDD.idx  diagnostic.cpp.9C4B008926438A75.idx  diagnostic.cpp.D7F3125F2A076200.idx  diagnostic.hpp.A4272E33F4B73362.idx  diagnostic.hpp.E1686D0216811D29.idx  emit.cpp.77BBBAA967CB5F02.idx  emit.cpp.877CAEFFEA0A61B6.idx  (+87 more)
cppver/compiler/: CMakeLists.txt  main.cpp
cppver/compiler/lib/: clap.cpp  clap.hpp  defines.hpp  opts.hpp
cppver/tests/: CMakeLists.txt
cppver/tests/lexer/: CMakeLists.txt  test_lexer.cpp
ir/: data.py  (+5 more)
(+297 files in other folders)
